--- a/src/assets/style/global.less
+++ b/src/assets/style/global.less
@@ -87,5 +87,11 @@ body {
     &.pass {
       background-color: rgb(var(--green-6));
     }
+    &.medium {
+      background-color: yellow;
+    }
+    &.bad {
+      background-color: red;
+    }
   }
 }
